--- a/dev/public/basket.html
+++ b/dev/public/basket.html
@@ -574,7 +574,7 @@
                     <input class="search-form__input form-item form-item--text" type="text" name="city" placeholder="" data-validation="{&quot;message&quot;: &quot;Обязательное поле&quot;}" required="" value="Ростов-на-Дону">
                     <button class="search-form__clear input__clear_visibility_visible btn btn--medium" type="button"></button>
                   </div>
-                  <label class="form-item-label" for="city">Выберите свой город в списке</label>
+                  <label class="form-item-label" for="city">Ваш город</label>
                 </div>
                 <div class="form-row">
                   <div class="basket-form__title">2. Доставка</div>
@@ -583,36 +583,11 @@
                       <label class="form-radio">
                         <div class="filter-row__radio-coll">
                           <input class="form-item form-item--radio hidden-radio" type="radio" name="pickup">
-                          <div> <b>Доставка по Москве</b><br>Бесплатно</div>
-                        </div>
-                        <div class="filter-row__text-coll">Примерка 15 минут, позволяет определиться с выбором, пока курьер ожидает.</div>
-                      </label>
-                      <div class="filter-row__content"> 
-                        <div class="mb-30px">Если после примерки не подошла вещь, вы можете вернуть её курьеру. Возврат денежных средств будет осуществлен в течений 1-7 рабочих дней. Доставка за пределы МКАД только по 100% предоплате всей стоимости заказа на сайте. Сроки доставки 1-3 дня (при наличии изделий в Москве). Максимум 6 позиций в одном заказе.</div>
-                        <div class="bold mb-10px"> Куда доставить заказ?</div>
-                        <div class="mb-30px">
-                          <div class="search-form search-form--basket">
-                            <input class="search-form__input form-item form-item--text" type="text" name="city" placeholder="" data-validation="{&quot;message&quot;: &quot;Обязательное поле&quot;}" required="" value="Москва, ул. Ленина, 44, кв. 23">
-                            <button class="search-form__clear input__clear_visibility_visible btn btn--medium" type="button"></button>
-                          </div>
-                        </div><a class="link-more link-more-js" href="#"> Добавить комментарий к заказу</a>
-                        <div class="v-hidden">
-                          <div class="mt-30px"> 
-                            <textarea class="form-item--textarea w-100" name="" cols="30" rows="10"> </textarea>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="filter-row filter-row-click">
-                    <div class="filter-row__inner filter-row__inner--first">
-                      <label class="form-radio">
-                        <div class="filter-row__radio-coll">
-                          <input class="form-item form-item--radio hidden-radio" type="radio" name="pickup">
-                          <div> <b>Из магазина  </b><br>Бесплатно</div>
+                          <div>
+                             Из магазина  <br>Бесплатно</div>
                         </div>
                       </label>
-                      <div class="filter-row__content" style1="display: block;">
+                      <div class="filter-row__content" style="display: block;">
                         <ul class="basket__pickup">
                           <li>
                             <label class="form-radio">
@@ -645,7 +620,7 @@
                       <label class="form-radio">
                         <div class="filter-row__radio-coll">
                           <input class="form-item form-item--radio" type="radio" name="pickup">
-                          <div> <b>Курьерска служба СДЭК </b><br>с бесплатной примеркойот 160  Р</div>
+                          <div>Курьерска служба СДЭК с бесплатной примеркойот 160  Р</div>
                         </div>
                         <div class="filter-row__text-coll">Примерка 15 минут. Если после примерки не подошла вещь, вы можете вернуть её курьеру. </div>
                       </label>
@@ -671,13 +646,24 @@
                       <label class="form-radio">
                         <div class="filter-row__radio-coll">
                           <input class="form-item form-item--radio" type="radio" name="pickup">
-                          <div> <b>Пункты выдачи СДЭК</b><br> от 238 Р</div>
+                          <div>Пункты выдачи СДЭК<br> от 238 Р</div>
                         </div>
                         <div class="filter-row__text-coll">Доставка заказа в один из пунктов самовывоза компании СДЭК.</div>
                       </label>
-                      <div class="filter-row__content"> 
+                      <div class="filter-row__content">
+                        <div class="mb-30px">Примерка 15 минут. Если после примерки не подошла вещь, вы можете вернуть её курьеру. Возврат денежных средств будет осуществлен в течений 1-7 рабочих дней.</div>
                         <div class="bold mb-10px"> Куда доставить заказ?</div>
-                        <div class="mb-30px"><a class="btn btn--medium" href="#checkout-popup" data-popup="{&quot;type&quot;:&quot;inline&quot;}">ВЫБРАТЬ ПУНКТ ВЫДАЧИ</a></div>
+                        <div class="mb-30px">
+                          <div class="search-form search-form--basket">
+                            <input class="search-form__input form-item form-item--text" type="text" name="city" placeholder="" data-validation="{&quot;message&quot;: &quot;Обязательное поле&quot;}" required="" value="Москва, ул. Ленина, 44, кв. 23">
+                            <button class="search-form__clear input__clear_visibility_visible btn btn--medium" type="button"></button>
+                          </div>
+                        </div><a class="link-more link-more-js" href="#"> Добавить комментарий к заказу</a>
+                        <div class="v-hidden">
+                          <div class="mt-30px"> 
+                            <textarea class="form-item--textarea w-100" name="" cols="30" rows="10"> </textarea>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -686,7 +672,7 @@
                       <label class="form-radio">
                         <div class="filter-row__radio-coll">
                           <input class="form-item form-item--radio" type="radio" name="pickup">
-                          <div> <b>Пункты выдачи Via Delivery </b><br> от 193 Р</div>
+                          <div>Пункты выдачи Via Delivery <br> от 193 Р</div>
                         </div>
                         <div class="filter-row__text-coll">Доставка заказов с выдачей на кассе в Пятерочке или в отделениях СберБанка.</div>
                       </label>
@@ -1374,15 +1360,15 @@
         <div class="tabs form-tabs">
           <div class="tabs-heading form-tabs-heading">
             <div class="form-tabs-heading-items">
-              <div class="tab-heading-item active form-tab-heading-item" data-tab="#form_email" data-tabs=".tab">Через E-mail</div>
-              <div class="tab-heading-item form-tab-heading-item" data-tab="#form_phone" data-tabs=".tab">Через смс</div>
+              <div class="tab-heading-item active form-tab-heading-item" data-tab="#form_email" data-tabs=".tab">Войти через E-mail</div>
+              <div class="tab-heading-item form-tab-heading-item" data-tab="#form_phone" data-tabs=".tab">Войти через смс</div>
             </div>
           </div>
           <div class="tabs-content form-tabs-content">
             <div class="tab-content-item tab show form-tab-content-item" id="form_phone">
               <div class="form-row">
                 <div class="page-popup-title--small">
-                  Пожалуйста, введите вашномер, на который мы отправим смс скодом для восстановления пароля   </div>
+                  Пожалуйста, введите ваш номер, на который мы отправим смс скодом для восстановления пароля   </div>
               </div>
               <div class="form-row">
                 <label class="form-label" for="auth_sms">Контактный телефон</label>
@@ -1465,6 +1451,39 @@
         </form>
       </div>
     </div>
+    <div class="page-popup mfp-hide" id="nosms-popup">
+      <div class="page-popup-heading">
+        <div class="page-popup-title uppercase"> Не приходит sms</div>
+      </div>
+      <p>Проверьте, что:   </p>
+      <ul class="disc"> 
+        <li>ваш телефон включён и находится в зоне приёма сети,</li>
+        <li>вы ввели правильный номер телефона или адрес электронной почты.</li>
+        <li>Иногда СМС приходит не сразу. Если смс нет 20 минут, попробуйте получить код ещё раз.</li>
+      </ul>
+    </div>
+    <div class="page-popup mfp-hide" id="sms-cod-popup">
+      <div class="page-popup-title uppercase">Введите код</div>
+      <form class="form">
+        <div class="tab-content-item auth-tab show form-tab-content-item" id="auth-form_phone">
+          <div class="form-row">               
+            <div class="page-popup-title--small">Мы отправили код подтверждения на номер <br>+7 900-456-98-88. <a class="link link--black_border" href="login.html">Изменить номер</a></div>
+          </div>
+          <div class="form-row">
+            <div class="form-item-holder">
+              <input class="form-item form-item--text" id="auth_sms" type="text" name="auth_sms" required="" placeholder="6643" data-validation="{&quot;message&quot;: &quot;Укажите код из смс&quot;, &quot;mask&quot;: &quot;9999&quot;}">
+            </div>
+          </div>
+          <div class="form-row" style="margin-bottom: 10px;"><a class="btn btn--black btn--medium w100 max-w100" href="sms-cod.html">Войти</a></div>
+          <div class="form-row"> 
+            <div class="new-code">Получить новый код можно через 0:30</div>
+          </div>
+          <div class="form-row">
+            <div class="form-group-inner forgot-password"><a class="link link--black_simple" href="login.html"><span>Войти по E-mail  </span></a><a class="link link--black_border" href="#nosms-popup" data-popup="{&quot;type&quot;:&quot;inline&quot;}"> <span>Не приходит смс?</span></a></div>
+          </div>
+        </div>
+      </form>
+    </div>
     <div class="page-popup page-popup--checked mfp-hide" id="checkout-popup">
       <div class="page-popup-heading">
         <div class="page-popup-title uppercase">ВЫБРАТЬ ПУНКТ ВЫДАЧИ</div>
@@ -1473,7 +1492,33 @@
         <div class="page-popup-body__card-block">
           <div id="map"></div>
         </div>
-        <div class="page-popup-body__text-block">Выбор магазина BRUSNIKA</div>
+        <div class="page-popup-body__text-block"> 
+          <div class="order-aside__title">Выбор магазина BRUSNIKA</div>
+          <div class="search-form search-form--basket">
+            <input class="search-form__input form-item form-item--text" type="text" name="city" value="Ростов-на-Дону">
+            <button class="search-form__clear input__clear_visibility_visible btn btn--medium" type="button">    </button>
+          </div>
+          <div class="filter-row__content" style="margin-left: 0px;">
+            <ul class="basket__pickup">
+              <li>
+                <div class="form-radio__item">
+                  <div class="basket__pickup-metro">ТРЦ Горизонт</div>
+                  <div class="basket__pickup-address">пр-т Михаила Нагибина, д. 32/2, ТРЦ «Горизонт», «Премиум-галерея» 1 этаж </div>
+                  <div class="basket__pickup-data">(с 10:00 до 22:00)</div>
+                  <div class="basket__pickup-payment"> <b>Бесплатно </b>— можно забрать 1 июня, в субботу</div>
+                </div>
+              </li>
+              <li>
+                <div class="form-radio__item">
+                  <div class="basket__pickup-metro">Проспект Чехова, д. 51–53</div>
+                  <div class="basket__pickup-address"> проспект Чехова, д. 51-53</div>
+                  <div class="basket__pickup-data">(с 09:00 до 21:00)</div>
+                  <div class="basket__pickup-payment"> <b>Бесплатно </b>— можно забрать 1 июня, в субботу<br>Срок хранения заказа — 30 дней</div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
     <div class="page-popup page-popup-w565 mfp-hide" id="notify-about-arrival">
