--- a/dev/public/shops.html
+++ b/dev/public/shops.html
@@ -506,7 +506,7 @@
         </div>
         <div class="page-inner page-inner--w2 page-inner--shops">
           <div class="filters-block-wrapper">
-            <div class="filters-block d-block d-lg-none">
+            <div class="filters-block filters-block-shops d-block d-lg-none">
               <div class="row mobile-slider"><a class="filter-slider__shops-link" href="#">Москва</a><a class="filter-slider__shops-link" href="#">Санкт-Петербург</a><a class="filter-slider__shops-link" href="#">Екатеринбург</a><a class="filter-slider__shops-link" href="#">Ростов-на-Дону</a><a class="filter-slider__shops-link" href="#">Сочи</a><a class="filter-slider__shops-link" href="#">Краснодар</a><a class="filter-slider__shops-link" href="#">Калининград</a><a class="filter-slider__shops-link" href="#">Якутск</a><a class="filter-slider__shops-link" href="#">Уфа</a><a class="filter-slider__shops-link" href="#">Ставрополь</a><a class="filter-slider__shops-link" href="#">Костанай</a><a class="filter-slider__shops-link" href="#">Zurich</a><a class="filter-slider__shops-link" href="#">Geneve</a>
               </div>
             </div>
