same-edits for shop-map

--- a/dev/public/shop-map.html
+++ b/dev/public/shop-map.html
@@ -505,13 +505,13 @@
           <div class="page-shop-title uppercase">МАГАЗИНЫ</div>
         </div>
         <div class="page-inner page-inner--w2 page-inner--shop-map">
-          <div class="filters-block">
-            <div class="filters-row d-block d-lg-none">
-              <div class="filter-items filters-list" data-params="{&quot;slidesToShow&quot;: 10}"><a href="#">Москва</a><a href="#">Санкт-Петербург</a><a href="#">Екатеринбург</a><a href="#">Ростов-на-Дону</a><a href="#">Сочи</a><a href="#">Краснодар</a><a href="#">Калининград</a><a href="#">Якутск</a><a href="#">Уфа</a><a href="#">Ставрополь</a><a href="#">Костанай</a><a href="#">Zurich</a><a href="#">Geneve</a>
+          <div class="filters-block-wrapper">
+            <div class="filters-block filters-block-shops d-block d-lg-none">
+              <div class="row mobile-slider"><a class="filter-slider__shops-link" href="#">Москва</a><a class="filter-slider__shops-link" href="#">Санкт-Петербург</a><a class="filter-slider__shops-link" href="#">Екатеринбург</a><a class="filter-slider__shops-link" href="#">Ростов-на-Дону</a><a class="filter-slider__shops-link" href="#">Сочи</a><a class="filter-slider__shops-link" href="#">Краснодар</a><a class="filter-slider__shops-link" href="#">Калининград</a><a class="filter-slider__shops-link" href="#">Якутск</a><a class="filter-slider__shops-link" href="#">Уфа</a><a class="filter-slider__shops-link" href="#">Ставрополь</a><a class="filter-slider__shops-link" href="#">Костанай</a><a class="filter-slider__shops-link" href="#">Zurich</a><a class="filter-slider__shops-link" href="#">Geneve</a>
               </div>
             </div>
             <div class="filters-row">
-              <div class="d-none d-lg-block">
+              <div class="filters-row__list d-none d-lg-block">
                 <ul class="filters-list">
                   <li> <a href="#">Москва</a></li>
                   <li> <a href="#">Санкт-Петербург</a></li>
@@ -528,10 +528,12 @@
                   <li> <a href="#">Geneve</a></li>
                 </ul>
               </div>
-              <ul class="filters-list-small">
-                <li><a href="shops.html">Список</a></li>
-                <li><span class="active">На карте</span></li>
-              </ul>
+              <div>
+                <ul class="filters-list-small">
+                  <li><a href="shops.html">Список</a></li>
+                  <li><span class="active">На карте</span></li>
+                </ul>
+              </div>
             </div>
           </div>
           <div id="map"></div>
