--- a/dev/public/shops.html
+++ b/dev/public/shops.html
@@ -513,19 +513,19 @@
             <div class="filters-row">
               <div class="filters-row__list d-none d-lg-block">
                 <ul class="filters-list">
-                  <li class="filter-slider__shops-list-link"><a href="#">Москва</a></li>
-                  <li class="filter-slider__shops-list-link"><a href="#">Санкт-Петербург</a></li>
-                  <li class="filter-slider__shops-list-link"><a href="#">Екатеринбург</a></li>
-                  <li class="filter-slider__shops-list-link"><a href="#">Ростов-на-Дону</a></li>
-                  <li class="filter-slider__shops-list-link"><a href="#">Сочи</a></li>
-                  <li class="filter-slider__shops-list-link"><a href="#">Краснодар</a></li>
-                  <li class="filter-slider__shops-list-link"><a href="#">Калининград</a></li>
-                  <li class="filter-slider__shops-list-link"><a href="#">Якутск</a></li>
-                  <li class="filter-slider__shops-list-link"><a href="#">Уфа</a></li>
-                  <li class="filter-slider__shops-list-link"><a href="#">Ставрополь</a></li>
-                  <li class="filter-slider__shops-list-link"><a href="#">Костанай</a></li>
-                  <li class="filter-slider__shops-list-link"><a href="#">Zurich</a></li>
-                  <li class="filter-slider__shops-list-link"><a href="#">Geneve</a></li>
+                  <li> <a href="#">Москва</a></li>
+                  <li> <a href="#">Санкт-Петербург</a></li>
+                  <li> <a href="#">Екатеринбург</a></li>
+                  <li> <a href="#">Ростов-на-Дону</a></li>
+                  <li> <a href="#">Сочи</a></li>
+                  <li> <a href="#">Краснодар</a></li>
+                  <li> <a href="#">Калининград</a></li>
+                  <li> <a href="#">Якутск</a></li>
+                  <li> <a href="#">Уфа</a></li>
+                  <li> <a href="#">Ставрополь</a></li>
+                  <li> <a href="#">Костанай</a></li>
+                  <li> <a href="#">Zurich</a></li>
+                  <li> <a href="#">Geneve</a></li>
                 </ul>
               </div>
               <div>
