add collection page and banner on it

--- a/dev/public/collection.html
+++ b/dev/public/collection.html
@@ -501,6 +501,27 @@
         </div>
       </header>
       <main class="page-content">
+        <div class="page-inner--banners"> 
+          <div class="big-grid">
+            <div class="big-grid__item-two-center-left"> 
+              <div class="catalog-item w2 m-0">
+                <div class="catalog-item-photo-holder"><img class="cover" src="./../dummy/collection/c2.png"></div>
+              </div>
+            </div>
+            <div class="big-grid__item-two-center-right"> 
+              <div class="catalog-item w2 m-0">
+                <div class="catalog-item-photo-holder"><img class="cover" src="./../dummy/collection/c3.png"></div>
+              </div>
+            </div>
+          </div>
+          <div class="big-grid__item-one-center-text">
+            <div class="banner-item-text">
+              <div class="banner-item-text__title">EAST WAY</div>
+              <div class="banner-item-text__lid">Spring/Summer 2022</div>
+              <div class="banner-item-text__text">С каждым сезоном анималистичные принты только набирают обороты. 100% вискоза и хлопок, яркие краски и знойный дух пустыни.</div>
+            </div>
+          </div>
+        </div>
         <div class="page-inner page-inner--w1 page-inner--mobile_empty">
           <div class="filters-block d-block d-lg-none">
             <div class="row mobile-slider"><a href="#">Эко–кожа</a><a href="#">Вискоза / Хлопок</a><a href="#">Шерсть / Кашемир</a><a href="#">Комбинезоны</a><a href="#">Цвет</a>
@@ -526,7 +547,7 @@
           </div>
         </div>
         <div class="page-inner page-inner--w2"> 
-          <div class="big-grid" id="catalog-items">
+          <div class="big-grid">
             <div class="big-grid__item-one-center"> 
               <div class="catalog-item w2 m-0">
                 <div class="slider-arrows"><span class="catalog-item-slider-arrow prev">
